[tool.poetry]
name = "aturan-calendar"
version = "0.1.0"
description = "Converts between our calendar and the Aturan calendar"
authors = ["Christian Sauer <sauerc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
pytest-pythonpath = "*"
tox-pyenv = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
